[package]
name = "alice-bio"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "ALICE-Bio — Molecular structure as signed distance functions, amino acid energy potentials, folding SDF"
license = "AGPL-3.0-only"
repository = "https://github.com/ext-sakamoro/ALICE-Bio"

[dependencies]

[lib]
name = "alice_bio"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
